C2 - Segundo Commit Origen App.config SecurityServices.cs, Program.cs Script Productos

--- a/TestDatabase/App.config
+++ b/TestDatabase/App.config
@@ -32,7 +32,7 @@
          providerName="System.Data.SqlServerCe.4.0"
     />
     <add name="OMBContext"
-         connectionString="Data source=F:\CURSO_2016_01\src\OMB\db\OMB.sdf;Persist Security Info=False;"
+         connectionString="Data source=F:\OMB_ORIGEN\db\OMB.sdf;Persist Security Info=False;"
          providerName="System.Data.SqlServerCe.4.0"
     />
   </connectionStrings>
